@@ -16,6 +16,11 @@
    />
 
   <browser:resource
+    name="eea.daviz.warnings.js"
+    file="./js/warnings.js"
+   />
+
+  <browser:resource
     name="eea.daviz.datasource.css"
     file="./css/datasource.css"
    />
