@@ -3,6 +3,8 @@ Changelog
 
 4.6-dev - (unreleased)
 ----------------------
+* Feature: Warn user about changing data risks
+  [voineali fixes #4973]
 * Feature: Added @@data.info adapter for DavizVisualization content-type in order
   to easily get data source and data owner metadata
   [voineali refs #5072]
